--- a/biblioteca_digital/libros/templates/libros/alta_multimedia.html
+++ b/biblioteca_digital/libros/templates/libros/alta_multimedia.html
@@ -40,23 +40,10 @@
                 <label for="cdu">CDU:</label>
                 <input type="text" class="form-control" value="Escriba aquí..." id="cdu" name="cdu">
             </div>
-            <div class="col-2">
-                <label for="cargar_imagen">Cargar Imagen:</label>
-                <input type="file" class="form-control" id="cargar_imagen" name="cargar_imagen">
-            </div>
+            <div class="col-2"></div>
         </div>
 
-        <div class="row mt-3 pt-3">
-            <div class="col-10">
-                <label for="palabras_clave">Palabras Clave:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="palabras_clave" name="palabras_clave" required>
-            </div>
-        </div>
-
-        <!-- Contenedor para ejemplares -->
-        <div id="ejemplares-container">
-            <!-- Los ejemplares se agregarán dinámicamente aquí -->
-        </div>
+        {% include 'components/form_ejemplares.html' %}
     </div>
 </div>
 
