Alerta de disminucion de numero de ejemplar

--- a/biblioteca_digital/views/templates/materiales/alta_material.html
+++ b/biblioteca_digital/views/templates/materiales/alta_material.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col-2 form-group mb-0" id="cant_ejemplares_container">
                 <label for="cant_ejemplares" class="small">Cant. Ejemplares:</label>
-                <input type="number" class="form-control form-control-sm" id="cant_ejemplares" name="cant_ejemplares" min="1" value="1" required oninput="updateRows()">
+                <input type="number" class="form-control form-control-sm" id="cant_ejemplares" name="cant_ejemplares" min="1" value="1" required>
             </div>
             <div class="col-6"></div>
             <div class="col-2 upload-container">
