--- a/biblioteca_digital/libros/templates/libros/alta_proyector.html
+++ b/biblioteca_digital/libros/templates/libros/alta_proyector.html
@@ -3,30 +3,30 @@
         <div class="row mb-3">
             <div class="col-4">
                 <label for="marca">Marca:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="marca" name="marca" required>
+                <input type="text" class="form-control" id="marca" name="marca" required placeholder="Escriba aquí...">
             </div>
             <div class="col-3">
                 <label for="modelo">Modelo:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="modelo" name="modelo" required>
+                <input type="text" class="form-control" id="modelo" name="modelo" required placeholder="Escriba aquí...">
             </div>
             <div class="col-3">
                 <label for="numero_serie">Número de Serie:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="numero_serie" name="numero_serie" required>
+                <input type="text" class="form-control" id="numero_serie" name="numero_serie" required placeholder="Escriba aquí...">
             </div>
         </div>
 
         <div class="row">
             <div class="col-4">
                 <label for="descripcion">Descripción:</label>
-                <textarea class="form-control textarea-wrapper" id="descripcion" name="descripcion">Escriba aquí...</textarea>
+                <textarea class="form-control textarea-wrapper" id="descripcion" name="descripcion" placeholder="Escriba aquí..."></textarea>
             </div>
             <div class="col-3">
                 <label for="lumenes">Lúmenes:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="lumenes" name="lumenes">
+                <input type="text" class="form-control" id="lumenes" name="lumenes" placeholder="Escriba aquí...">
             </div>
             <div class="col-3">
                 <label for="resolucion">Resolución:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="resolucion" name="resolucion">
+                <input type="text" class="form-control" id="resolucion" name="resolucion" placeholder="Escriba aquí...">
             </div>
             <div class="col-2"></div>
         </div>
@@ -34,7 +34,7 @@
         <div class="row mt-3 pt-3">
             <div class="col-4">
                 <label for="tipo_lampara">Tipo de Lámpara:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="tipo_lampara" name="tipo_lampara">
+                <input type="text" class="form-control" id="tipo_lampara" name="tipo_lampara" placeholder="Escriba aquí...">
             </div>
         </div>
 
