--- a/biblioteca_digital/libros/templates/libros/alta_libro.html
+++ b/biblioteca_digital/libros/templates/libros/alta_libro.html
@@ -4,15 +4,15 @@
         <div class="row mb-3">
             <div class="col-4">
                 <label for="titulo">Título:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="titulo" name="titulo" required>
+                <input type="text" class="form-control" id="titulo" name="titulo" required placeholder="Escriba aquí...">
             </div>
             <div class="col-3">
                 <label for="autor">Autor:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="autor" name="autor" required>
+                <input type="text" class="form-control" id="autor" name="autor" required placeholder="Escriba aquí...">
             </div>
             <div class="col-3">
                 <label for="editorial">Editorial:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="editorial" name="editorial" required>
+                <input type="text" class="form-control" id="editorial" name="editorial" required placeholder="Escriba aquí...">
             </div>
         </div>
 
@@ -20,14 +20,14 @@
         <div class="row mb-3">
             <div class="col-4">
                 <label for="descripcion">Descripción:</label>
-                <textarea class="form-control textarea-wrapper" id="descripcion" name="descripcion" rows="5">Escriba aquí...</textarea>
+                <textarea class="form-control textarea-wrapper" id="descripcion" name="descripcion" rows="5" placeholder="Escriba aquí..."></textarea>
             </div>
             <div class="col-3">
                 <label for="siglas_autor">Siglas Autor:</label>
-                <input type="text" class="form-control mb-3" value="Escriba aquí..." id="siglas_autor" name="siglas_autor">
+                <input type="text" class="form-control mb-3" id="siglas_autor" name="siglas_autor" placeholder="Escriba aquí...">
                 
                 <label for="cdu">CDU:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="cdu" name="cdu">
+                <input type="text" class="form-control" id="cdu" name="cdu" placeholder="Escriba aquí...">
             </div>
             <div class="col-2"></div>
             <div class="col-3"></div>
