--- a/biblioteca_digital/libros/templates/libros/alta_multimedia.html
+++ b/biblioteca_digital/libros/templates/libros/alta_multimedia.html
@@ -3,7 +3,7 @@
         <div class="row mb-3">
             <div class="col-4">
                 <label for="titulo">Título:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="titulo" name="titulo" required>
+                <input type="text" class="form-control" id="titulo" name="titulo" required placeholder="Escriba aquí...">
             </div>
             <div class="col-3">
                 <label for="tipo_multimedia">Tipo:</label>
@@ -18,22 +18,22 @@
             </div>
             <div class="col-3">
                 <label for="duracion">Duración:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="duracion" name="duracion">
+                <input type="text" class="form-control" id="duracion" name="duracion" placeholder="Escriba aquí...">
             </div>
         </div>
 
         <div class="row">
             <div class="col-4">
                 <label for="descripcion">Descripción:</label>
-                <textarea class="form-control textarea-wrapper" id="descripcion" name="descripcion">Escriba aquí...</textarea>
+                <textarea class="form-control textarea-wrapper" id="descripcion" name="descripcion" placeholder="Escriba aquí..."></textarea>
             </div>
             <div class="col-3">
                 <label for="formato">Formato:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="formato" name="formato">
+                <input type="text" class="form-control" id="formato" name="formato" placeholder="Escriba aquí...">
             </div>
             <div class="col-3">
                 <label for="cdu">CDU:</label>
-                <input type="text" class="form-control" value="Escriba aquí..." id="cdu" name="cdu">
+                <input type="text" class="form-control" id="cdu" name="cdu" placeholder="Escriba aquí...">
             </div>
             <div class="col-2"></div>
         </div>
