mejoras diseño alta_material

--- a/biblioteca_digital/views/templates/materiales/alta_material.html
+++ b/biblioteca_digital/views/templates/materiales/alta_material.html
@@ -59,12 +59,11 @@
                     </div>
                 </div>
                 <!-- Fila 4/5: Carga masiva avanzada (solo visible si corresponde) -->
-                <div id="upload_box_container" style="display: none; width: 100%;">
-                    <div class="upload-box w-100">
+                <div id="upload_box_container" class="custom-upload-box-container" style="display: none; width: 100%;">
+                    <div class="custom-upload-box w-100">
                         <h5 class="mt-3">Cargar imagen</h5>
-                        <button class="btn btn-outline-info w-100 mb-2" type="button">↑</button>
-                        <input type="text" class="form-control mb-2" placeholder="O pegue un enlace aquí...">
-                        <div class="badge bg-light text-dark w-100">nombre-del-archivo.jpg</div>
+                        <button class="btn btn-sm custom-upload-btn w-100 mb-2" type="button">↑</button>
+                        <input type="text" class="form-control custom-upload-input mb-2" placeholder="O pegue un enlace aquí...">
                     </div>
                 </div>
             </div>
