--- a/biblioteca_digital/libros/templates/libros/alta_libro.html
+++ b/biblioteca_digital/libros/templates/libros/alta_libro.html
@@ -20,17 +20,14 @@
         <div class="row mb-3">
             <div class="col-4">
                 <label for="descripcion">Descripción:</label>
-                <textarea class="form-control textarea-wrapper" id="descripcion" name="descripcion" rows="5" placeholder="Escriba aquí..."></textarea>
+                <textarea class="form-control textarea-wrapper" id="descripcion" name="descripcion" rows="4" style="min-width: 100%; max-width: 100%; min-height: 70px;" placeholder="Escriba aquí..."></textarea>
             </div>
-            <div class="col-3">
+            <div class="col-4">
                 <label for="siglas_autor">Siglas Autor:</label>
                 <input type="text" class="form-control mb-3" id="siglas_autor" name="siglas_autor" placeholder="Escriba aquí...">
-                
                 <label for="cdu">CDU:</label>
                 <input type="text" class="form-control" id="cdu" name="cdu" placeholder="Escriba aquí...">
             </div>
-            <div class="col-2"></div>
-            <div class="col-3"></div>
         </div>
 
         {% include 'components/form_ejemplares.html' %}
