--- a/biblioteca_digital/views/templates/components/form_ejemplares.html
+++ b/biblioteca_digital/views/templates/components/form_ejemplares.html
@@ -8,7 +8,7 @@
         <input type="text" class="form-control" value="Escriba aquí..." id="palabras_clave" name="palabras_clave" required>
     </div>
 </div>
-<div class="container-fluid" style="height: 30px;">
+<div class="col-12 mt-3" style="height: 30px;">
     <hr class="custom-dashed-line">
 </div>
 
